# pepebot

./: .dockerignore  .env.example  .gitignore  ANDROID.md  BUILD.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.3.1.md  config.example.json  default.nix  docker-compose.yml  go.mod  go.sum  install.sh
.github/workflows/: ci.yml  release.yml
cmd/pepebot/: main.go  signal_unix.go  signal_windows.go
dashboard/: index.js  package-lock.json  package.json  vite.config.js
dashboard/client/: package-lock.json  package.json
dashboard/prisma/: dev.db  dev.db-journal  schema.prisma
dashboard/src/: App.vue  main.js  style.css
docker/: README.md  crontab.example
docs/: README.md  android.md  api.md  install.md  live-api.md  orchestration.md  workflows.md
examples/live-api/: client-openai.py  client-video.py  client.py  index-auto.html  index-openai.html  index-video.html  index.html
examples/live-api/python/: README.md  main.py  pyproject.toml
pkg/agent/: context.go  loop.go  manager.go  registry.go
pkg/bus/: bus.go  types.go
pkg/channels/: base.go  discord.go  feishu.go  maixcam.go  manager.go  telegram.go  whatsapp.go  whatsapp_stub.go
pkg/config/: config.go
pkg/gateway/: handlers.go  handlers_features.go  handlers_task.go  handlers_template.go  server.go  taskstream.go
pkg/live/: gemini_live.go  generation_config.go  live.go  openai_live.go  systemprompt_test.go  vertex_live.go
pkg/mcp/: client.go  registry.go  runtime.go
pkg/providers/: filetype.go  http_provider.go  types.go  (+3 more)
(+67 files in other folders)
